Notebook - Search checklist items